--- a/portfolio/templates/admin/base_site.html
+++ b/portfolio/templates/admin/base_site.html
@@ -1,5 +1,20 @@
 {% extends "admin/base.html" %}
 {% load static %}
+
+{% block title %}Portfolio Admin{% endblock %}
+
+{% block extrastyle %}
+  {{ block.super }}
+  <link rel="stylesheet" type="text/css" href="{% static 'admin/custom.css' %}">
+{% endblock %}
+
+{% block branding %}
+  <h1 id="site-name"><a href="{% url 'admin:index' %}">Portfolio Admin</a></h1>
+{% endblock %}
+
+{% block nav-global %}{% endblock %}
+{% extends "admin/base.html" %}
+{% load static %}
 {% block title %}{{ site_title|default:_('Django site admin') }}{% endblock %}
 {% block extrastyle %}
 {{ block.super }}
