--- a/portfolio/templates/admin/base_site.html
+++ b/portfolio/templates/admin/base_site.html
@@ -2,16 +2,12 @@
 {% load static %}
 {% block title %}{{ site_title|default:_('Django site admin') }}{% endblock %}
 {% block extrastyle %}
-{{ block.super }}
-<link rel="stylesheet" href="{% static 'css/admin.css' %}">
-{% endblock %}
-{% block extrahead %}
-{{ block.super }}
-<script src="{% static 'js/admin.js' %}"></script>
+  {{ block.super }}
+  <link rel="stylesheet" type="text/css" href="{% static 'admin/custom.css' %}">
 {% endblock %}
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">
-  {% if SITE and SITE.brand_name %}{{ SITE.brand_name }} Admin{% else %}Portfolio Admin{% endif %}
-</a></h1>
+  <h1 id="site-name"><a href="{% url 'admin:index' %}">
+    {% if SITE and SITE.brand_name %}{{ SITE.brand_name }} Admin{% else %}Portfolio Admin{% endif %}
+  </a></h1>
 {% endblock %}
 {% block nav-global %}{% endblock %}
